src/test/ui/issues/issue-45829/rename-use-with-tabs.stderr
error[E0252]: the name `A` is defined multiple times
  --> $DIR/rename-use-with-tabs.rs:9:14
   |
LL | use foo::{A, bar::B    as    A};
   |           -  ^^^^^^^^^^^^^^^^^ `A` reimported here
   |           |
   |           previous import of the type `A` here
   |
   = note: `A` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | use foo::{A, bar::B as OtherA};
   |              ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0252`.
